# dd_lingua

./: Makefile  README.md  environment.yml  pyproject.toml
src/dd_lingua/core/: model.py  utils.py
src/dd_lingua/interfaces/: _api.py  _cli.py
src/dd_lingua/schemas/: request.py  response.py  settings.py
src/dd_lingua/schemas/enums/: lingua.py
src/dd_lingua/utils/: batch.py  info.py  logging.py
